fix search bar - invisible border issue

--- a/qtify/src/components/Hero/Hero.module.css
+++ b/qtify/src/components/Hero/Hero.module.css
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 60px 120px;
+  background-color: black;
+  color: white;
 }
 
 .left {
