--- a/qtify/src/components/Search/Search.module.css
+++ b/qtify/src/components/Search/Search.module.css
@@ -1,7 +1,6 @@
 .container {
   position: relative;
   width: 50%;
-  /* background-color: blue; */
 }
 
 .wrapper {
@@ -9,16 +8,14 @@
   align-items: center;
   width: 100%;
   height: 48px;
-  /* background-color: red; */
 }
 
 .search {
   padding: 8px 0px 0px 14px !important;
   height: 48px;
   border-radius: 8px 0px 0px 8px !important;
-  border: 1px solid var(--color-black);
+  border: 1px solid var(--color-black) !important;
   background-color: white;
-  width: 100%;
   font-size: 16px;
   box-sizing: border-box;
 }
